# cnpy

./: .appveyor.yml  .travis.yml  AUTHORS.md  CMakeLists.txt  README.md  cnpy.cpp  cnpy.h  example1.cpp  setup.py
cmake/: autocmake.yml  cnpyConfig.cmake.in
cmake/custom/: c99.cmake  cnpy.cmake  cxx11.cmake  export_target.cmake  test.cmake  version.cmake
test/: CMakeLists.txt  test_cxx11.cpp  test_cxx98.cpp
